--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ h1 {
 
 section {
     display: flex;
+    margin-bottom: 100px;
+
 }
 
 .half-width {
@@ -25,6 +27,7 @@ section {
 .half-width img {
     width: 70%;
     padding-left: 10%;
+
 }
 
 .link-button {
@@ -39,4 +42,10 @@ section {
 .top-banner {
     background-image: url(img/top-banner.png);
     background-repeat: no-repeat;
+}
+
+.Big-Dream {
+    background-image: url(img/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
